--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ body {
   background-color: var(--yellow);
   font-family: "Muli", sans-serif;
   font-weight: 200;
+  line-height: 1.2;
   /* animation: color-transition 60s infinite; */
 }
 
